--- a/test/test3_authorextract_target.bib
+++ b/test/test3_authorextract_target.bib
@@ -1,298 +1,298 @@
+@ARTICLE{Tukey:1947:QIO,
+  author = {John W. Tukey},
+  title = {Question 4: Infinite observations},
+  journal = {The American Statistician},
+  volume = {1},
+  number = {3},
+  pages = {17--18},
+  month = {????},
+  year = {1947},
+  CODEN = {ASTAAJ},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  ASnumber = {17},
+  fjournal = {The American Statistician},
+  PMnumber = {17}
+}
+
 @ARTICLE{Tukey:1949:MSFa,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {1},
-  month = {????},
-  volume = {3},
-  ASnumber = {22},
-  ISSN-L = {0003-1305},
-  year = {1949},
-  PMnumber = {32},
   title = {Memorandum on statistics in the {Federal Government}, {Part I}},
+  journal = {The American Statistician},
+  volume = {3},
+  number = {1},
   pages = {6--17},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Tukey:1986:SS,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {John W. Tukey},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {??},
   month = {????},
-  volume = {40},
-  ASnumber = {137},
-  ISSN-L = {0003-1305},
-  year = {1986},
-  PMnumber = {308},
-  title = {Sunset salvo},
-  pages = {72--76},
+  year = {1949},
   CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  ASnumber = {22},
+  fjournal = {The American Statistician},
+  PMnumber = {32}
 }
 
-@ARTICLE{Tukey:1985:DPP,
-  DOI = {http://dx.doi.org/10.1214/aos/1176349533},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+@ARTICLE{Tukey:1949:MSFb,
   author = {John W. Tukey},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  URL = {http://projecteuclid.org/euclid.aos/1176349533; http://www.jstor.org/stable/2241189},
+  title = {Memorandum on statistics in the {Federal Government}, {Part II}},
   journal = {The American Statistician},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibdate = {Sun Jun 05 14:54:48 2011},
+  volume = {3},
   number = {2},
-  month = {6},
-  volume = {39},
-  pages = {517--518},
-  xxtitle = {Comments on {{\em Projection pursuit}}},
-  year = {1985},
-  PMnumber = {286},
-  title = {Discussion: Projection Pursuit},
-  ISSN-L = {0003-1305},
+  pages = {12--16},
+  month = {????},
+  year = {1949},
   CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  ASnumber = {23},
+  fjournal = {The American Statistician},
+  PMnumber = {33}
+}
+
+@ARTICLE{Tukey:1949:AQM,
+  author = {John W. Tukey},
+  title = {Answer to question 21: Maximum likelihood estimates, efficiency},
+  journal = {The American Statistician},
+  volume = {3},
+  number = {4},
+  pages = {12--12},
+  month = {????},
+  year = {1949},
+  CODEN = {ASTAAJ},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  ASnumber = {33},
+  fjournal = {The American Statistician},
+  PMnumber = {34, 47},
+  remark = {McCullagh bibliography duplicates this entry.}
 }
 
 @ARTICLE{Tukey:1965:TTSb,
+  author = {John W. Tukey},
+  title = {The technical tools of statistics},
+  journal = {The American Statistician},
+  volume = {19},
+  number = {2},
+  pages = {23--28},
+  month = {????},
+  year = {1965},
+  CODEN = {ASTAAJ},
   ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {John W. Tukey},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {2},
-  month = {????},
-  volume = {19},
   ASnumber = {94},
-  ISSN-L = {0003-1305},
-  year = {1965},
-  PMnumber = {139},
-  title = {The technical tools of statistics},
-  pages = {23--28},
+  fjournal = {The American Statistician},
+  PMnumber = {139}
+}
+
+@ARTICLE{Rathbun:1972:RPC,
+  author = {Daniel B. Rathbun and W. Allen Wallis and Frederick Mosteller and Ansley J. Coale and Paul M. Densen and Solomon Fabricant and Robert D. Fisher and W. Braddock Hickman and William Kruskal and Stanley Lebergott and Richard M. Scammon and William H. Shaw and Frank D. Stella and James A. Suffridge and John W. Tukey},
+  title = {The Report of the {President's Commission on Federal Statistics}},
+  journal = {The American Statistician},
+  volume = {26},
+  number = {1},
+  pages = {15--18},
+  month = {2},
+  year = {1972},
   CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 10:58:18 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib; JSTOR database},
+  URL = {http://www.jstor.org/stable/2682840},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  fjournal = {The American Statistician},
+  PMnumber = {none}
 }
 
 @ARTICLE{McGill:1978:VBP,
-  remark = {McCullagh bibliography duplicates this entry.},
+  author = {R. McGill and John W. Tukey and W. A. Larsen},
+  title = {Variations of {Box} plots},
+  journal = {The American Statistician},
+  volume = {32},
+  number = {??},
+  pages = {12--16},
+  month = {????},
+  year = {1978},
+  CODEN = {ASTAAJ},
   ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {R. McGill and John W. Tukey and W. A. Larsen},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {??},
-  month = {????},
-  volume = {32},
   ASnumber = {123},
-  ISSN-L = {0003-1305},
-  year = {1978},
+  fjournal = {The American Statistician},
   PMnumber = {231, 234},
-  title = {Variations of {Box} plots},
-  pages = {12--16},
+  remark = {McCullagh bibliography duplicates this entry.}
+}
+
+@ARTICLE{Tukey:1980:WNB,
+  author = {John W. Tukey},
+  title = {We need both exploratory and confirmatory},
+  journal = {The American Statistician},
+  volume = {34},
+  number = {??},
+  pages = {23--25},
+  month = {????},
+  year = {1980},
   CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  ASnumber = {131},
+  fjournal = {The American Statistician},
+  PMnumber = {257}
+}
+
+@ARTICLE{Tukey:1985:DPP,
+  author = {John W. Tukey},
+  title = {Discussion: Projection Pursuit},
+  journal = {The American Statistician},
+  volume = {39},
+  number = {2},
+  pages = {517--518},
+  month = {6},
+  year = {1985},
+  CODEN = {ASTAAJ},
+  DOI = {http://dx.doi.org/10.1214/aos/1176349533},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Sun Jun 05 14:54:48 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  URL = {http://projecteuclid.org/euclid.aos/1176349533; http://www.jstor.org/stable/2241189},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  fjournal = {The American Statistician},
+  PMnumber = {286},
+  xxtitle = {Comments on {{\em Projection pursuit}}}
+}
+
+@ARTICLE{Tukey:1985:CMI,
+  author = {John W. Tukey},
+  title = {Comments on {{\em More intelligent statistical software and statistical expert systems: Future directions}}},
+  journal = {The American Statistician},
+  volume = {39},
+  number = {??},
+  pages = {12--14},
+  month = {????},
+  year = {1985},
+  CODEN = {ASTAAJ},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Sun Jun 05 14:53:27 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  fjournal = {The American Statistician},
+  PMnumber = {285}
+}
+
+@ARTICLE{Tukey:1986:SS,
+  author = {John W. Tukey},
+  title = {Sunset salvo},
+  journal = {The American Statistician},
+  volume = {40},
+  number = {??},
+  pages = {72--76},
+  month = {????},
+  year = {1986},
+  CODEN = {ASTAAJ},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Tue May 31 14:45:43 MDT 2011},
+  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  ASnumber = {137},
+  fjournal = {The American Statistician},
+  PMnumber = {308}
+}
+
+@ARTICLE{Goodall:1998:CUR,
+  author = {Colin R. Goodall and Karen Kafadar and John W. Tukey},
+  title = {Computing and Using Rural versus Urban Measures in Statistical Applications},
+  journal = {The American Statistician},
+  volume = {52},
+  number = {2},
+  pages = {101--111},
+  month = {5},
+  year = {1998},
+  CODEN = {ASTAAJ},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Thu Oct 19 10:18:19 MDT 2000},
+  bibsource = {http://www.amstat.org/publications/tas/toc_98.html; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  URL = {http://www.amstat.org/publications/tas/abstracts_98/goodall.html; http://www.jstor.org/stable/2685467},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  ASnumber = {162},
+  fjournal = {The American Statistician},
+  PMnumber = {423}
 }
 
 @ARTICLE{Rousseeuw:1999:BBB,
+  author = {Peter J. Rousseeuw and Ida Ruts and John W. Tukey},
+  title = {The Bagplot: {A} Bivariate Boxplot},
+  journal = {The American Statistician},
+  volume = {53},
+  number = {4},
+  pages = {382--??},
+  month = {11},
+  year = {1999},
+  CODEN = {ASTAAJ},
   ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Thu Oct 19 10:18:22 MDT 2000},
   bibsource = {http://www.amstat.org/publications/tas/toc_99.html; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {Peter J. Rousseeuw and Ida Ruts and John W. Tukey},
-  bibdate = {Thu Oct 19 10:18:22 MDT 2000},
-  number = {4},
-  month = {11},
-  volume = {53},
-  ISSN-L = {0003-1305},
-  year = {1999},
-  title = {The Bagplot: {A} Bivariate Boxplot},
-  pages = {382--??},
-  CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
 }
 
 @ARTICLE{Almond:2000:DCG,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.amstat.org/publications/tas/; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  URL = {http://www.amstat.org/publications/tas/Almond.htm},
-  journal = {The American Statistician},
   author = {Russell G. Almond and Charles Lewis and John W. Tukey and Duanli Yan},
-  bibdate = {Fri Jul 20 11:18:01 MDT 2001},
-  number = {2},
-  month = {5},
-  volume = {54},
-  ISSN-L = {0003-1305},
-  year = {2000},
   title = {Displays for Comparing a Given State to Many Others},
+  journal = {The American Statistician},
+  volume = {54},
+  number = {2},
   pages = {89--??},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Tukey:1980:WNB,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {John W. Tukey},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {??},
-  month = {????},
-  volume = {34},
-  ASnumber = {131},
-  ISSN-L = {0003-1305},
-  year = {1980},
-  PMnumber = {257},
-  title = {We need both exploratory and confirmatory},
-  pages = {23--25},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Tukey:1947:QIO,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {John W. Tukey},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {3},
-  month = {????},
-  volume = {1},
-  ASnumber = {17},
-  ISSN-L = {0003-1305},
-  year = {1947},
-  PMnumber = {17},
-  title = {Question 4: Infinite observations},
-  pages = {17--18},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Rathbun:1972:RPC,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib; JSTOR database},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  URL = {http://www.jstor.org/stable/2682840},
-  journal = {The American Statistician},
-  author = {Daniel B. Rathbun and W. Allen Wallis and Frederick Mosteller and Ansley J. Coale and Paul M. Densen and Solomon Fabricant and Robert D. Fisher and W. Braddock Hickman and William Kruskal and Stanley Lebergott and Richard M. Scammon and William H. Shaw and Frank D. Stella and James A. Suffridge and John W. Tukey},
-  bibdate = {Tue May 31 10:58:18 2011},
-  number = {1},
-  month = {2},
-  volume = {26},
-  ISSN-L = {0003-1305},
-  year = {1972},
-  PMnumber = {none},
-  title = {The Report of the {President's Commission on Federal Statistics}},
-  pages = {15--18},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Tukey:1949:MSFb,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {John W. Tukey},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {2},
-  month = {????},
-  volume = {3},
-  ASnumber = {23},
-  ISSN-L = {0003-1305},
-  year = {1949},
-  PMnumber = {33},
-  title = {Memorandum on statistics in the {Federal Government}, {Part II}},
-  pages = {12--16},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Tukey:1949:AQM,
-  remark = {McCullagh bibliography duplicates this entry.},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {John W. Tukey},
-  bibdate = {Tue May 31 14:45:43 MDT 2011},
-  number = {4},
-  month = {????},
-  volume = {3},
-  ASnumber = {33},
-  ISSN-L = {0003-1305},
-  year = {1949},
-  PMnumber = {34, 47},
-  title = {Answer to question 21: Maximum likelihood estimates, efficiency},
-  pages = {12--12},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Tukey:1985:CMI,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
-  author = {John W. Tukey},
-  bibdate = {Sun Jun 05 14:53:27 2011},
-  number = {??},
-  month = {????},
-  volume = {39},
-  ISSN-L = {0003-1305},
-  year = {1985},
-  PMnumber = {285},
-  title = {Comments on {{\em More intelligent statistical software and statistical expert systems: Future directions}}},
-  pages = {12--14},
-  CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
-}
-
-@ARTICLE{Goodall:1998:CUR,
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
-  bibsource = {http://www.amstat.org/publications/tas/toc_98.html; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  URL = {http://www.amstat.org/publications/tas/abstracts_98/goodall.html; http://www.jstor.org/stable/2685467},
-  journal = {The American Statistician},
-  author = {Colin R. Goodall and Karen Kafadar and John W. Tukey},
-  bibdate = {Thu Oct 19 10:18:19 MDT 2000},
-  number = {2},
   month = {5},
-  volume = {52},
-  ASnumber = {162},
-  ISSN-L = {0003-1305},
-  year = {1998},
-  PMnumber = {423},
-  title = {Computing and Using Rural versus Urban Measures in Statistical Applications},
-  pages = {101--111},
+  year = {2000},
   CODEN = {ASTAAJ},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
+  ISSN-L = {0003-1305},
+  bibdate = {Fri Jul 20 11:18:01 MDT 2001},
+  bibsource = {http://www.amstat.org/publications/tas/; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  URL = {http://www.amstat.org/publications/tas/Almond.htm},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   fjournal = {The American Statistician}
 }
 
 @INPROCEEDINGS{Karger:Scatter,
-  publisher = {ACM Press},
-  doi = {http://doi.acm.org/10.1145/133160.133214},
-  isbn = {0-89791-523-2},
   author = {Douglas Cutting and David R. Karger and Jan Pedersen and John W. Tukey},
-  ps = {http://people.csail.mit.edu/karger/Papers/SIGIR92.ps},
-  abstract = {Document clustering has not been well received as an information retrieval tool. Objections to its use fall into two main categories: first, that clustering is too slow for large corpora (with running time often quadratic in the number of documents); and second, that clustering does not appreciably improve retrieval. We argue that these problems arise only when clustering is used in an attempt to improve conventional search techniques. However, looking at clustering as an information access tool in its own right obviates these objections, and provides a powerful new access paradigm. We present a document browsing technique that employs document clustering as its primary operation. We also present fast (linear time) clustering algorithms which support this interactive browsing paradigm.},
   title = {Scatter/Gather: A Cluster-based Approach to Browsing Large Document Collections},
-  venue = {SIGIR},
-  month = {6},
-  cat = {Information Retrieval},
-  location = {Copenhagen, Denmark},
-  year = {1992},
   booktitle = {Proceedings of the  {$15^{th}$} Annual International {ACM} {SIGIR} Conference on Research and Development in Information Retrieval},
-  pages = {318-329}
+  venue = {SIGIR},
+  year = {1992},
+  month = {6},
+  isbn = {0-89791-523-2},
+  location = {Copenhagen, Denmark},
+  doi = {http://doi.acm.org/10.1145/133160.133214},
+  ps = {http://people.csail.mit.edu/karger/Papers/SIGIR92.ps},
+  publisher = {ACM Press},
+  cat = {Information Retrieval},
+  pages = {318-329},
+  abstract = {Document clustering has not been well received as an information retrieval tool. Objections to its use fall into two main categories: first, that clustering is too slow for large corpora (with running time often quadratic in the number of documents); and second, that clustering does not appreciably improve retrieval. We argue that these problems arise only when clustering is used in an attempt to improve conventional search techniques. However, looking at clustering as an information access tool in its own right obviates these objections, and provides a powerful new access paradigm. We present a document browsing technique that employs document clustering as its primary operation. We also present fast (linear time) clustering algorithms which support this interactive browsing paradigm.}
 }
 
