Added a new case to Test #1 for when <title> occurs at the end of a template.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -608,3 +608,12 @@
   Pages   = {10345--10354},
   Volume  = {25}
 }
+
+@TEMPLATE_ENDS_WITH_TITLE{template_ends_with_title,
+  title = {Does New York City really have as many rats as people?},
+  journal = {Significance},
+  volume = {11},
+  pages = {22-27},
+  year = {2014},
+  author = {J. Auerbach}
+}
